# wiki-public

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/git/: 01-create-a-new-repo.md  git.md
docs/macos/: apple-books-library.md  apple-books.md  apple-symbolic-hotkeys.md  export-contacts.md  misc.md  privacy.md  reference.md  references.md  restore-applebooks.md  sparsebundles.md  ssh.md
docs/misc/: npm-commands.md
docs/nas/: 01-router.md  02-synology-network.md  03-synology-data.md  04-synology-extras.md  05-how-to.md  06-reference.md
docs/python/: 02-install-pyenv.md  03-create-a-project.md  04-setup-vscode.md  05-testing-and-coverage.md  06-publish-to-pypi.md  create-a-project.md  install-poetry.md  testing-and-coverage.md
docs/recipes/: research.md
docs/synology/: 01-router.md  02-network.md  03-data.md  04-extras.md  05-reference.md  data.md  dsm.md  extras.md  network.md  reference.md  router.md
git/01-create-a-new-repo/: index.html
git/git/: index.html
macos/apple-books/: index.html
macos/apple-books-library/: index.html
macos/apple-symbolic-hotkeys/: index.html
macos/books/: index.html
macos/export-contacts/: index.html
macos/misc/: index.html
macos/privacy/: index.html
macos/reference/: index.html
macos/references/: index.html
macos/restore-applebooks/: index.html
macos/sparsebundles/: index.html
macos/spoof-mac-address/: index.html
macos/ssh/: index.html
macos/sudo-without-a-password/: index.html
misc/npm-commands/: index.html
search/: search_index.json
(+70 files in other folders)
